# rackai

./: README.md  REDUCTION.md  config.rkt  cont-unit.rkt  dprint.rkt  dummy-phase.rkt  env-sig.rkt  env-unit.rkt  eval-sig.rkt  example.rkt  example2.rkt  expand-sig.rkt  expander.rkt  interpreter.rkt  io-unit.rkt  mcont-unit.rkt  menv-unit.rkt  misc.rkt  mix.rkt  mstore-sig.rkt  nondet.rkt  parse-sig.rkt  parser.rkt  phase-sig.rkt  prim.rkt  queue.rkt  reduction-v1.0.rkt  reduction-v1.1.rkt  reduction-v1.2.rkt  reduction-v1.3.rkt  reduction.rkt  set.rkt  signatures.rkt  store-sig.rkt  struct-common-sig.rkt  struct-common-stxe-sig.rkt  struct-common-unit.rkt  syntax-sig.rkt  syntax.rkt  term.rkt  (+5 more)
abs/: TODO.md  alloc.rkt  core-mstore.rkt  (+4 more)
misc/ocaml/ITSA/: ITSA.opam  dune-project
misc/ocaml/ITSA/_build/: .db  .digest-db  log
misc/ocaml/ITSA/_build/default/: ITSA.dune-package  ITSA.install
misc/ocaml/ITSA/_build/default/.dune/: configurator  configurator.v2
misc/ocaml/ITSA/_build/default/.utop/: utop.ml-gen
misc/ocaml/ITSA/_build/default/lib/: ITSA.cma  ITSA.cmxa  ITSA.cmxs  abs.mli  conc.ml  dom_cst.ml  dom_sign.ml  iTSA.ml-gen  syntax.ml  syntax.mli
misc/ocaml/ITSA/_build/default/lib/.ITSA.objs/: abs.ml.d  abs.mli.d  conc.ml.d  dom.ml.d  dom_cst.ml.d  dom_sign.ml.d  dom_sign.mli.d  iTSA__Abs.impl.all-deps  iTSA__Conc.impl.all-deps  iTSA__Dom_sign.intf.all-deps  iTSA__Syntax.intf.all-deps  syntax.ml.d  syntax.mli.d
misc/ocaml/ITSA/_build/default/lib/.merlin-conf/: lib-ITSA
misc/ocaml/ITSA/lib/: abs.ml  dom.ml  dom_sign.mli  dune
misc/ocaml/ITSA/test/: dune
(+577 files in other folders)
