(lang dune 3.0)

(name ITSA)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ITSA)
 (synopsis "Code from ITSA")
 (description "Code from Introduction to StaticAnalysis - an Abstract Interpretation Perspective")
 (depends ocaml dune)
 (tags
  (topics "Abstract Interpretation" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
